# sdl2-cmake-emscripten

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
